--- a/src/app/blog/posts/new-milestone-in-my-career.mdx
+++ b/src/app/blog/posts/new-milestone-in-my-career.mdx
@@ -1,47 +1,38 @@
 ---
-title: "Arriving to a new milestone in my career"
-publishedAt: "2024-04-08"
+title: "From Desert Dreams to Global Horizons: My Entrepreneurial Odyssey"
+publishedAt: "2025-01-23"
 image: "/images/gallery/img-02.jpg"
 summary: "Every career is a journey, filled with challenges, growth, and those significant moments that mark a shift in our path."
 tag: "Journal"
 ---
 
-Every career is a journey, filled with challenges, growth, and those significant moments that mark a shift in our path. Today, I’m excited to share that I’ve arrived at a new milestone in my career—one that is both a culmination of past experiences and a stepping stone toward future aspirations.
+Life rarely follows a straight line. Mine? More like a wild, interconnected web of experiences that have transformed me from a University of Arizona graduate to a global entrepreneur, family man, and emerging web3 innovator.
 
-## Reflecting on the Journey So Far
+## The Leap of Faith
 
-Looking back, it’s clear that each phase of my career has built upon the last, guiding me to where I stand today. From my early days of learning the basics and struggling through complex projects, to gaining confidence through real-world experience, each step has shaped my skills and mindset. I’ve learned that design and engineering are as much about problem-solving and creativity as they are about resilience and continuous learning.
+Picture this: fresh out of university, I'm navigating the complex world of e-commerce and logistics. But something inside me was whispering, "There's more." That whisper became a roar when I decided to uproot my entire life and move to Hamburg, Germany. Not just for a change of scenery, but to pursue a Master's in Global Logistics – a decision that would redefine everything.
 
-<CodeBlock className="my-24"
-    compact
-    codeInstances={[
-        {
-            code: '<Button\n    className="button"\n    suffixIcon="chevronRight">\n    Next\n</Button>',
-            label: 'Next.js',
-            language: 'tsx'
-        },
-    ]}
-    copyButton
-/>
+## Building Roots, Breaking Boundaries
 
-## What This Milestone Represents
+Hamburg wasn't just a destination; it became my home. I didn't just study – I built. A startup took shape, but more profoundly, I started a family. Becoming a German citizen wasn't just a legal status; it was a testament to my commitment to embracing a new culture, a new life.
 
-Reaching this milestone represents more than just professional progress—it’s a moment of personal growth. It’s a sign that the dedication and passion I’ve invested are paying off. Whether it’s mastering a new skill, taking on leadership responsibilities, or completing a major project, this achievement is a reminder that perseverance, curiosity, and a love for what I do are key drivers of success.
+## The Entrepreneurial Rollercoaster
 
-## The Challenges That Shaped Me
+Entrepreneurship is never a linear journey. I jumped between roles like a skilled parkour artist:
 
-Of course, no journey is without its hurdles. There were moments of doubt, failed prototypes, and unforeseen obstacles that tested my resolve. However, those challenges taught me the importance of adaptability, creative thinking, and collaboration. They pushed me to improve, to think outside the box, and to view setbacks not as failures, but as opportunities to learn and grow.
+Founder: Learning to transform ideas into tangible realities
+Product Manager: Orchestrating complex projects with precision
+Freelancer: Juggling multiple client needs, each project a unique puzzle
 
-## Embracing New Opportunities
+Each role was a masterclass in adaptability, teaching me that success isn't about having a perfect plan, but about pivoting with grace and determination.
 
-This milestone is also an opportunity to embrace new challenges and expand my horizons. Whether it’s exploring emerging technologies, diving deeper into specific fields of interest, or taking on a mentorship role, I’m excited about what lies ahead. The engineering and design landscape is constantly evolving, and staying curious and open to new ideas is what keeps this career path so rewarding.
+## Coding: My New Frontier
 
-## Gratitude and Acknowledgment
+Just when you thought my journey couldn't get more adventurous, I dove into coding. Not just as a hobby, but with the ambition of building something revolutionary. My current project? A decentralized stablecoin pegged to the Mexican peso – bridging blockchain innovation with real-world economic solutions.
 
-I’d be remiss if I didn’t take a moment to acknowledge the mentors, colleagues, and collaborators who have been part of this journey. Their insights, support, and shared enthusiasm have been invaluable. Reaching this milestone is as much a testament to their influence as it is to my individual efforts.
+## The Unwritten Chapters
 
-## Looking Ahead
-
-While I’m proud of how far I’ve come, I know this is just one milestone in a much larger journey. The road ahead is filled with exciting possibilities, and I’m eager to continue pushing boundaries, learning new things, and contributing to meaningful projects. If there’s one thing I’ve learned along the way, it’s that every new milestone is not an end, but rather a launchpad for the next chapter.
-
-Thank you for being part of this journey with me, and here’s to the adventures yet to come!
+This isn't a story of arrival, but of continuous becoming. From the sun-baked landscapes of Arizona to the vibrant streets of Hamburg, from e-commerce to web3, I've learned that the most exciting journeys have no final destination.
+To anyone reading this: your path is yours to design. Embrace the detours, celebrate the learning, and never stop exploring.
+Here's to the next chapter – whatever it may be.
+Salud. Prost. Cheers.
