--- a/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
+++ b/src/app/work/projects/building-once-ui-a-customizable-design-system.mdx
@@ -1,26 +1,27 @@
 ---
-title: "Building Once UI, a Customizable Design System"
+title: "Building Xocolatl Finance, a public good for the Mexican DeFi ecosystem"
 publishedAt: "2024-04-08"
-summary: "Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration."
+summary: "Helped build a stablecoin pegged to the MXN peso called $XOC, which was missing in the web3 ecosystem in Mexico"
 images:
-  - "/images/projects/project-01/cover-01.jpg"
-  - "/images/projects/project-01/cover-02.jpg"
-  - "/images/projects/project-01/cover-03.jpg"
-  - "/images/projects/project-01/cover-04.jpg"
+  - "/images/projects/project-01/xocolatl-cover.png"
+  - "/images/projects/project-01/xocolatl-screenshot1.png"
+  - "/images/projects/project-01/xocolatl-screenshot2.png"
+  - "/images/projects/project-01/xocolatl-screenshot3.png"
 team:
-  - name: "Selene Yu"
+  - name: "Ivan Flores Hurtado"
     role: "Software Engineer"
     avatar: "/images/avatar.jpg"
     linkedIn: "https://www.linkedin.com/company/once-ui/"
-  - name: "Jane Smith"
+  - name: "Daigaro Cota"
     role: "Product Manager"
     avatar: "/images/projects/project-01/avatar-01.png"
     linkedIn: "https://www.linkedin.com/company/once-ui/"
+link: "https://xocolatl.finance/"
 ---
 
 ## Overview
 
-Development of a flexible and highly customizable design system using Next.js for front-end and Figma for design collaboration.
+In this project, we developed Xocolatl Finance, a stablecoin pegged to the Mexican peso (MXN). This ERC20-compliant token, named $XOC, fills a crucial gap in the Mexican DeFi ecosystem by providing a stable digital asset that can be seamlessly integrated into various DeFi protocols. Our goal was to create a reliable and accessible financial tool that supports the growth and adoption of decentralized finance in Mexico.
 
 ## Key Features
 
@@ -33,8 +34,8 @@ Development of a flexible and highly customizable design system using Next.js fo
 
 - **Next.js**: For fast, server-rendered React applications.
 - **Figma**: For creating and managing design assets and prototypes.
-- **Styled-Components**: For styling React components with a modular, themable approach.
-- **Storybook**: For building an interactive, documented component library.
+- **Tailwind CSS**: For styling React components with a modular, themable approach.
+- **Wagmi/Viem**: For building an interactive, documented component library.
 
 ## Challenges and Learnings
 
